# image-segmentation-for-robotic-grasping

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
assets/: grocessry_items.webm  object_picking.webm
