# ===============================
# Build system (PEP 517/518)
# ===============================
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

# ===============================
# Project metadata (PEP 621)
# ===============================
[project]
name = "sam2-click-segmentation"
version = "0.1.0"
description = "Minimal click-based image segmentation using SAM-2."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
    { name = "Devadas Vijayan Sheela" }
]

# ===============================
# Runtime dependencies
# ===============================
dependencies = [
    "torch",
    "torchvision",
    "numpy",
    "opencv-python",
    "matplotlib",
    "Pillow",
    "sam2 @ git+https://github.com/facebookresearch/sam2.git"
]
