# ===============================
# Build system
# ===============================
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

# ===============================
# Project metadata
# ===============================
[project]
name = "image-segmentation-for-robotic-grasping"
version = "0.1.0"
description = "Interactive image segmentation using SAM-2 for robotic grasping."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"

authors = [
    { name = "Devadas Vijayan Sheela" }
]

dependencies = [
    "torch",
    "torchvision",
    "numpy",
    "opencv-python",
    "matplotlib",
    "Pillow",
    "sam2 @ git+https://github.com/facebookresearch/sam2.git"
]

# ✅ THIS IS THE IMPORTANT PART
[tool.setuptools]
packages = []
